<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FitoTrack</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="exporting">Exporting</string>
    <string name="error">Error</string>
    <string name="errorGpxExportFailed">The GPX export has failed.</string>
    <string name="errorExportFailed">The data export has failed.</string>
    <string name="errorImportFailed">The data import has failed.</string>
    <string name="shareFile">Share file</string>
    <string name="initialising">Initialising</string>
    <string name="workouts">Workouts</string>
    <string name="locationData">Location data</string>
    <string name="converting">Converting</string>
    <string name="finished">Finished</string>
    <string name="loadingFile">Loading file</string>
    <string name="chooseBackupFile">Choose Backup-File</string>
    <string name="importBackupMessage">Back up your current data now if you want to keep it. Restore prior backup now\?</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="setPreferencesTitle">Set Preferences</string>
    <string name="setPreferencesMessage">You can set your preferred unit system and your weight in the settings.</string>
    <string name="timeMinuteSingular">Minute</string>
    <string name="timeMinutePlural">Minutes</string>
    <string name="timeMinuteShort">min</string>
    <string name="timeHourSingular">Hour</string>
    <string name="timeHourPlural">Hours</string>
    <string name="timeHourShort">h</string>
    <string name="timeSecondsShort">s</string>
    <string name="and">and</string>
    <string name="errorEnterValidNumber">Enter a valid number</string>
    <string name="errorWorkoutAddFuture">The workout cannot be in the future</string>
    <string name="errorEnterValidDuration">Enter a valid duration</string>
    <string name="announcementGPSStatus">GPS Status</string>
    <string name="announcementWorkoutActions">Workout Actions (pause, resume, etc.)</string>
    <string name="voiceAnnouncementsTitle">Voice Announcements</string>
    <string name="pref_voice_announcements_summary">Configure voice prompts that inform you during the workout</string>
    <string name="pref_announcements_config_title">Announcement Trigger</string>
    <string name="pref_announcements_config_summary">Choose the time and distance between voice announcements</string>
    <string name="pref_announcements_content">Content of the announcements</string>
    <string name="workoutRecordingTypeGps">GPS Workouts</string>
    <string name="workoutRecordingTypeIndoor">Indoor Workouts</string>
    <string name="gpsLost">GPS signal lost</string>
    <string name="gpsFound">GPS signal found</string>
    <string name="workoutTime">Time</string>
    <string name="workoutDate">Date</string>
    <string name="workoutDuration">Duration</string>
    <string name="workoutAvgDurationLong">Average Duration</string>
    <string name="workoutDurationSum">Duration sum</string>
    <string name="workoutPauseDuration">Pause Duration</string>
    <string name="workoutAvgPauseDuration">Average Pause Duration</string>
    <string name="workoutPauseDurationSum">Pause Duration sum</string>
    <string name="workoutStartTime">Start Time</string>
    <string name="workoutEndTime">End Time</string>
    <string name="workoutDistance">Distance</string>
    <string name="workoutRepetitions">Repetitions</string>
    <string name="workoutSets">Sets</string>
    <string name="workoutPace">Pace</string>
    <string name="workoutRoute">Route</string>
    <string name="workoutSpeed">Speed</string>
    <string name="workoutFrequency">Frequency</string>
    <string name="workoutAvgFrequencyShort">Avg. Frequency</string>
    <string name="workoutAvgFrequencyLong">Average Frequency</string>
    <string name="workoutCurrentFrequency">Current Frequency</string>
    <string name="workoutMaxFrequency">Max Frequency</string>
    <string name="workoutIntensity">Intensity</string>
    <string name="workoutAvgIntensityShort">Avg. Intensity</string>
    <string name="workoutMaxIntensity">Max Intensity</string>
    <string name="workoutAvgSpeedShort">Avg. Speed</string>
    <string name="workoutAvgSpeedLong">Average Speed</string>
    <string name="workoutTopSpeed">Top Speed</string>
    <string name="workoutBurnedEnergy">Burned Energy</string>
    <string name="workoutTotalEnergy">Total Energy</string>
    <string name="workoutEnergyConsumption">Energy Consumption</string>
    <string name="workoutHeartRate">Heart Rate</string>
    <string name="heartRateSensorBattery">Sensor Battery</string>
    <string name="workoutMaxHeartRate">Max Heart Rate</string>
    <string name="workoutAvgHeartRate">Avg. heart rate</string>
    <string name="workoutEdited">This workout has been edited.</string>
    <string name="uploading">Uploading</string>
    <string name="enterVerificationCode">Enter Verification Code</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="upload">Upload</string>
    <string name="uploadSuccessful">Upload Successful</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="uploadFailedOsmNotAuthorized">Not authorized, try again</string>
    <string name="workoutAscent">Ascent</string>
    <string name="workoutDescent">Descent</string>
    <string name="workoutMinHeight">Min height</string>
    <string name="workoutMaxHeight">Max height</string>
    <string name="height">Height</string>
    <string name="workoutTypeRunning">Running</string>
    <string name="workoutTypeWalking">Walking</string>
    <string name="workoutTypeCycling">Cycling</string>
    <string name="workoutTypeHiking">Hiking</string>
    <string name="workoutTypeSkateboarding">Skateboarding</string>
    <string name="workoutTypeInlineSkating">Inline Skating</string>
    <string name="workoutTypeRowing">Rowing</string>
    <string name="workoutTypeOther">Other</string>
    <string name="workoutTypeTreadmill">Treadmill</string>
    <plurals name="workoutStep">
        <item quantity="one">Step</item>
        <item quantity="other">Steps</item>
    </plurals>
    <string name="workoutTypeRopeSkipping">Rope Skipping</string>
    <string name="workoutTypeTrampolineJumping">Trampoline Jumping</string>
    <plurals name="workoutJump">
        <item quantity="one">Jump</item>
        <item quantity="other">Jumps</item>
    </plurals>
    <string name="workoutTypePushUps">Push ups</string>
    <plurals name="workoutPushUp">
        <item quantity="one">Push up</item>
        <item quantity="other">Push ups</item>
    </plurals>
    <string name="unknown">Unknown</string>
    <string name="workoutTypeAdd">Add</string>
    <string name="workoutTypeAll">All</string>
    <string name="type">Type</string>
    <string name="enterWorkout">Enter Workout</string>
    <string name="importWorkout">Import Workout</string>
    <string name="setDuration">Set Duration</string>
    <string name="recordWorkout">Record Workout</string>
    <string name="noGpsTitle">GPS disabled</string>
    <string name="noGpsMessage">Please enable GPS for tracking your workout.</string>
    <string name="enable">Enable</string>
    <string name="comment">Comment</string>
    <string name="enterComment">Enter Comment</string>
    <string name="okay">Okay</string>
    <string name="stopRecordingQuestion">Stop Recording?</string>
    <string name="stopRecordingQuestionMessage">Do you really want to stop the recording?</string>
    <string name="continue_">Continue</string>
    <string name="deleteWorkout">Delete Workout</string>
    <string name="deleteWorkoutMessage">Do you really want to delete the workout?</string>
    <string name="trackerRunning">Tracker is running</string>
    <string name="trackerWaitingMessage">Waiting to start workout</string>
    <string name="trackingInfo">Tracking Info</string>
    <string name="trackingInfoDescription">Info about the tracker running</string>
    <string name="cancel">Cancel</string>
    <string name="exportAsGpxFile">Export as GPX-File</string>
    <string name="pref_weight">Your Weight</string>
    <string name="pref_weight_summary">Your weight is needed to calculate the burned calories</string>
    <string name="pref_step_length">Step Length</string>
    <string name="pref_unit_system">Preferred system of units</string>
    <string name="settings">Settings</string>
    <string name="exportData">Export Data</string>
    <string name="exportDataSummary">This takes a backup of all workouts</string>
    <string name="importBackup">Import Data Backup</string>
    <string name="importBackupSummary">Restore a taken backup</string>
    <string name="gps">GPS</string>
    <string name="mapStyle">Map Style</string>
    <string name="trackStyle">Track Style</string>
    <string name="prefTrackStyleUsageTitle">Use track coloring automatically</string>
    <string name="waiting_gps">Waiting for GPS</string>
    <string name="actionUploadToOSM">Upload to OSM</string>
    <string name="cut">Cut the first/last 300 m</string>
    <string name="trackVisibilityPref">Track Visibility</string>
    <string name="description">Description</string>
    <string name="ttsNotAvailable">TextToSpeech is not available</string>
    <string name="pref_announcement_mode">Announcement Mode</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="savedSuccessfully">Saved</string>
    <string name="savingFailed">Saving failed</string>
    <string name="info">Info</string>
    <string name="OpenStreetMapAttribution">© OpenStreetMap contributors</string>
    <string name="theme">Theme</string>
    <string name="hintRestart">Please restart the app to apply changes</string>
    <string name="noComment">No comment</string>
    <string name="start">Start</string>
    <string name="cannotStart">Cannot start</string>
    <string name="add">Add</string>
    <string name="add_interval">Add Interval</string>
    <string name="edit_interval">Edit Interval</string>
    <string name="manageIntervalSets">Manage Interval Sets</string>
    <string name="manageIntervalsSummary">Edit the interval sets you will be able to use during the workout using voice feedback.</string>
    <string name="createIntervalSet">Create New Interval Set</string>
    <string name="create">Create</string>
    <string name="hintManageIntervalSets">Add an interval set to use it in your workouts.</string>
    <string name="hintEditIntervalSet">Add intervals that will be spoken.</string>
    <string name="interval_name">Name:</string>
    <string name="length_in_minutes">Duration (minutes):</string>
    <string name="enterName">Enter a name</string>
    <string name="deleteIntervalSet">Delete Interval Set</string>
    <string name="deleteIntervalSetMessage">Do you want to delete the interval set?</string>
    <string name="selectIntervalSet">Select Interval Set</string>
    <string name="intervalSetSelected">Interval Set selected</string>
    <string name="intervalsIncludePauseTitle">Include Pause Time in Interval Training</string>
    <string name="intervalsIncludePauseSummary">If activated, the intervals will continue even if you do pauses in your workout.</string>
    <string name="intervalTraining">Interval Training</string>
    <string name="intervalSet">Interval Set</string>
    <string name="intervalSets">Interval Sets</string>
    <string name="currentSpeed">Current Speed</string>
    <string name="statsFilter">Filter:</string>
    <string name="importMultipleGpxFiles">Import multiple GPX-files</string>
    <string name="numberOfWorkouts">Workout number</string>
    <string name="energyExpended">Energy expended</string>
    <string name="caloriesBurned">Calories burned</string>
    <string name="heartFrequency">Heart frequency</string>
</resources>