<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Jannis Scheibe <jannis@tadris.de>
  ~
  ~ This file is part of FitoTrack
  ~
  ~ FitoTrack is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FitoTrack is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/backup">

        <Preference
            android:key="import"
            android:summary="@string/importBackupSummary"
            android:title="@string/importBackup" />
        <Preference
            android:key="export"
            android:summary="@string/exportDataSummary"
            android:title="@string/exportData" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/bulkActions">

        <Preference
            android:key="importMultiple"
            android:title="@string/importMultipleGpxFiles"
            android:summary="@string/importMultipleGpxFilesSummary" />

    </PreferenceCategory>


</PreferenceScreen>
