<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragmentHistoryTypeSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workoutSpeed"
                android:layout_marginRight="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/statsFilter" />

            <TextView
                android:id="@+id/fragmentHistoryTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="start"
                android:text="Running"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/aggregationWorkoutTypeIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:src="@drawable/ic_run"/>
        </LinearLayout>


    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/stats_speed_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workoutDistance" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/stats_dist_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workoutDuration" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/stats_duration_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    </LinearLayout>
</ScrollView>