<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/title"
                android:id="@+id/stats_energy_expended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/energyExpended" />

            <com.github.mikephil.charting.charts.CombinedChart
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/title"
                android:id="@+id/stats_heart_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heartFrequency" />

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.github.mikephil.charting.charts.CombinedChart
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/title"
                android:id="@+id/stats_calories_burned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caloriesBurned" />

            <com.github.mikephil.charting.charts.CombinedChart
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>